Fixed index scroll on mobile

--- a/index.css
+++ b/index.css
@@ -80,7 +80,8 @@ a:hover{
 
   body{
     overflow-x: hidden;
-    overflow-y: hidden;
+    width: 100%;
+    height: 100%;
   }
 
     nav[role="navigation"]{
